--- a/app/src/main/res/layout/activity_classif_shop.xml
+++ b/app/src/main/res/layout/activity_classif_shop.xml
@@ -6,18 +6,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/board"
-    tools:context="com.xingguang.localrun.maincode.home.view.activity.LookShopActivity">
+    tools:context="com.xingguang.localrun.maincode.home.view.activity.ClassifShopActivity">
 
     <include layout="@layout/toolbar_layout" />
 
+
     <LinearLayout
-        android:layout_marginTop="@dimen/dp10"
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.androidkun.xtablayout.XTabLayout
-            android:id="@+id/xtab_shop"
+            android:id="@+id/xtab_classifshop"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
@@ -40,7 +41,7 @@
             android:background="@color/fengexian" />
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/mPager_shop"
+            android:id="@+id/mPager_classifshop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white" />
