--- a/app/src/main/res/layout/activity_look_shop.xml
+++ b/app/src/main/res/layout/activity_look_shop.xml
@@ -8,7 +8,47 @@
     android:background="@color/board"
     tools:context="com.xingguang.localrun.maincode.home.view.activity.LookShopActivity">
 
-    <include layout="@layout/toolbar_layout" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/ClubToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/titlebar_color"
+        android:minHeight="?attr/actionBarSize">
+
+        <ImageView
+            android:id="@+id/toolbar_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="12dp"
+            android:paddingRight="14dp"
+            android:src="@mipmap/back_black"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/toolbar_subtitle"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:lines="1"
+            android:paddingRight="@dimen/outside_margin"
+            android:textColor="@color/titlebar_txt_color"
+            android:textSize="14sp"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/toolbar_subimg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:padding="5dp"
+            android:src="@mipmap/attention_bg"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_marginTop="@dimen/dp10"
@@ -25,7 +65,6 @@
             app:xTabDisplayNum="5"
             app:xTabIndicatorColor="@color/home_read"
             app:xTabIndicatorHeight="2dp"
-            app:xTabIndicatorWidth="35dp"
             app:xTabMode="scrollable"
             app:xTabPaddingEnd="10dp"
             app:xTabPaddingStart="10dp"
