--- a/app/src/main/res/layout/activity_productdetails.xml
+++ b/app/src/main/res/layout/activity_productdetails.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/ll_parent"
     tools:context="com.xingguang.localrun.maincode.home.view.activity.ProductdetailsActivity">
 
 
-    <include layout="@layout/toolbar_layout" />
 
-    <View
-        android:background="@color/fengexian"
-        android:layout_width="match_parent"
-        android:layout_height="1dp" />
+
 
     <com.xingguang.localrun.view.TiceScrollview
         android:id="@+id/sc_head_view"
@@ -47,14 +44,17 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tv_pro_price"
+                        android:layout_centerVertical="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:text="¥25"
                         android:textColor="@color/home_read"
                         android:textSize="14sp" />
 
                     <LinearLayout
+                        android:id="@+id/ll_profenxinag"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
@@ -64,6 +64,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="8dp"
                             android:text="分享"
                             android:textColor="@color/textGray"
                             android:textSize="14sp" />
@@ -83,13 +84,13 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv_pro_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:lineSpacingExtra="4dp"
                         android:text="桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭"
                         android:textColor="@color/textBlack"
                         android:textSize="15sp" />
-
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -105,6 +106,7 @@
                             android:textSize="14sp" />
 
                         <TextView
+                            android:id="@+id/tv_pro_guige"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/dp10"
@@ -169,7 +171,30 @@
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
-
     </com.xingguang.localrun.view.TiceScrollview>
 
-</LinearLayout>
+
+    <include layout="@layout/toolbar_layout" />
+
+
+    <!--底部功能按钮-->
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="45dp">
+
+        <Button
+            android:visibility="gone"
+            android:id="@+id/btn_mybaishi"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#e0FF8A00"
+            android:textColor="#ffffff"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+
+</RelativeLayout>
