--- a/app/src/main/res/layout/activity_home_search.xml
+++ b/app/src/main/res/layout/activity_home_search.xml
@@ -122,10 +122,10 @@
 
         <!--标签-->
         <LinearLayout
+            android:visibility="visible"
             android:id="@+id/ll_biaoqian"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:orientation="vertical">
 
             <com.xingguang.localrun.view.TagCloudLayout
@@ -143,6 +143,19 @@
 
     </LinearLayout>
 
+    <!--搜索的数据-->
+    <LinearLayout
+        android:id="@+id/ll_rv"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
 
 
